Slight change to the gpio program to fix SPI buffer size when loading the module. Typo in gpio man page Bug fixed in board revision detection (which would never happen anyway, however)

--- a/gpio/gpio.1
+++ b/gpio/gpio.1
@@ -182,7 +182,7 @@ close as the Pi can manage) The default speed is 100Kb/sec.
 
 .TP
 .B load spi [buffer size in KB]
-This loads the the spi drivers into the kernel and changes the permissions
+This loads the spi drivers into the kernel and changes the permissions
 on the associated /dev/ entries so that the current user has access to
 them. Optionally it will set the SPI buffer size to that supplied. The
 default is 4KB.
