--- a/gpio/gpio.1
+++ b/gpio/gpio.1
@@ -1,4 +1,4 @@
-.TH GPIO 1 "September 2015" wiringPi "Command-Line access to Raspberry Pi's GPIO"
+.TH GPIO 1 "March 2018" wiringPi "Command-Line access to Raspberry Pi's GPIO"
 
 .SH NAME
 gpio \- Command-line access to Raspberry Pi's GPIO
@@ -9,7 +9,7 @@ gpio \- Command-line access to Raspberry Pi's GPIO
 .PP
 .B gpio
 .B [ \-g | \-1 ]
-.B mode/read/write/aread/awrite/wb/pwm/clock/toggle/blink ...
+.B mode/read/write/aread/awrite/wb/pwm/pwnTone/clock/toggle/blink ...
 .PP
 .B gpio
 .B [ \-x extension:params ]
@@ -18,6 +18,11 @@ gpio \- Command-line access to Raspberry Pi's GPIO
 .B gpio
 .B [ \-p ]
 .B read/write/toggle/blink
+.B ...
+.PP
+.B gpio
+.B [ \-p ]
+.B pwnTone pin frequency
 .B ...
 .PP
 .B gpio
@@ -257,30 +262,6 @@ Change the PWM mode to balanced (the default) or mark:space ratio (traditional)
 Change the PWM range register. The default is 1024.
 
 .TP
-.B load i2c [baudrate]
-This loads the i2c or drivers into the kernel and changes the permissions
-on the associated /dev/ entries so that the current user has access to
-them. Optionally it will set the I2C baudrate to that supplied in Kb/sec
-(or as close as the Pi can manage) The default speed is 100Kb/sec.
-
-Note: On recent kernels with the device tree enabled you should use the
-raspi-config program to load/unload the I2C device at boot time.
-
-.TP
-.B load spi
-This loads the spi drivers into the kernel and changes the permissions
-on the associated /dev/ entries so that the current user has access to
-them. It used to have the ability to change the buffer size from the
-default of 4096 bytes to an arbitrary value, however for some time the
-Pi Foundation have compiled the SPI device driver into the kernel and
-this has fixed the buffer size. The way to change it now is to edit
-the /boot/cmdline.txt file and add on spdev.bufsiz=8192 to set it to
-e.g. 8192 bytes then reboot.
-
-Note: On recent kernels with the device tree enabled you should use the
-raspi-config program to load/unload the SPI device at boot time.
-
-.TP
 .B gbr
 channel
 
@@ -360,7 +341,7 @@ Please report bugs to <projects@drogon.net>
 
 .SH COPYRIGHT
 
-Copyright (c) 2012-2015 Gordon Henderson
+Copyright (c) 2012-2018 Gordon Henderson
 This is free software; see the source for copying conditions. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
