Update support contacts for INSTALL and gpio.1

--- a/gpio/gpio.1
+++ b/gpio/gpio.1
@@ -337,7 +337,7 @@ Gordon Henderson
 
 .SH "REPORTING BUGS"
 
-Please report bugs to <projects@drogon.net>
+Please report bugs to https://github.com/WiringPi/WiringPi/issues
 
 .SH COPYRIGHT
 
