--- a/INSTALL
+++ b/INSTALL
@@ -23,7 +23,11 @@ To un-install wiringPi:
 
   ./build uninstall
 
-Gordon Henderson
+For help and support see:
 
-projects@drogon.net
+* https://github.com/WiringPi/WiringPi/issues
+* https://discord.gg/SM4WUVG
+
+
+wiringPi originally created by Gordon Henderson
 https://projects.drogon.net/
